[package]
name = "argon2-cloudflare"
version = "0.1.0"
edition = "2021"

# https://github.com/rustwasm/wasm-pack/issues/1247
[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib"]

[dependencies]
argon2 = "0.5.2"
getrandom = { version = "0.2.11", features = ["js"] }
rand_core = { version = "0.6.4", features = ["std"] }
serde = { version = "1.0.192", features = ["derive"] }
serde_json = "1.0.108"
worker = "0.0.15"

[profile.release]
lto = true
strip = true
codegen-units = 1
